lesson_12: base, debug, debug with postgres, production settings added

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "program": "${workspaceFolder}/manage.py",
             "args": [
                 "runserver",
-                "127.0.0.1:8000"
+                "--settings",
+                "backend.settings.debug_pg",
             ],
             "django": true,
             "justMyCode": false
